--- a/week1-javascript/javascript-lotto-6-main/index.html
+++ b/week1-javascript/javascript-lotto-6-main/index.html
@@ -5,44 +5,91 @@
     <title>🎱 행운의 로또</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div id="app">
       <header class="app-header">
-        <h1>🎱 행운의 로또</h1>
+        <div>🎱 행운의 로또</div>
       </header>
       <main>
         <section class="main-section">
           <header class="main-header">
-            <h1>🎱 내 번호 당첨 확인 🎱</h1>
+            <div>🎱 내 번호 당첨 확인 🎱</div>
           </header>
-          <section>
-            <label> 구입할 금액을 입력해주세요. </label>
-            <input type="text " placeholder="금액" />
-            <button>구입</button>
+          <section class="main-purchase-input text-body">
+            <label class="text-body" for="purchase-price">
+              구입할 금액을 입력해주세요.
+            </label>
+            <div>
+              <input
+                type="text "
+                placeholder="금액"
+                name="purchase-price"
+                id="purchase-price"
+              />
+              <button>구입</button>
+            </div>
           </section>
-          <section class="hidden">
-            <section class="purchased-lotto"></section>
-            <div>지난 주 당첨번호 6개와 보너스 번호 1개를 입력해주세요.</div>
-            
-            
-            <span>🎟️</span>
-            <section>
-              <label for="lotto-numbers"> 당첨번호 </label>
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <input type="number" id="lotto-numbers" name="lotto-numbers" />
-              <label for="bonus-number">보너스 번호</label>
-              <input type="number" name="bonus-number" id="bonus-number" />
-            </section>
+          <section class="purchased-lotto-container">
+            <div class="purchased-lotto text-body">
+              <span class="purchased-lotto-icon">🎟️</span>
+              <span class="purchased-lotto-numbers"
+                >12, 19, 22, 23, 28, 37</span
+              >
+            </div>
+          </section>
+          <section class="main-answer-input text-body hidden">
+            <div class="text-body">
+              지난 주 당첨번호 6개와 보너스 번호 1개를 입력해주세요.
+            </div>
+            <div class="number-input-container">
+              <div class="number-input">
+                <label for="lotto-numbers"> 당첨번호 </label>
+                <div>
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                  <input
+                    type="number"
+                    id="lotto-numbers"
+                    name="lotto-numbers"
+                  />
+                </div>
+              </div>
+              <div class="number-input">
+                <label for="bonus-number">보너스 번호</label>
+                <input type="number" name="bonus-number" id="bonus-number" />
+              </div>
+            </div>
+            <button class="check-result-btn">결과 확인하기</button>
           </section>
         </section>
       </main>
-      <footer>Copyright 2023. woowacourse</footer>
+      <footer class="app-footer">Copyright 2023. woowacourse</footer>
     </div>
     <script type="module" src="./src/js/index.js"></script>
   </body>
